# domain-match

./: .gitignore  LICENSE  README.md  package.yaml  stack.yaml
app/: Main.hs
go/: README.md  go.mod  go.sum  main.go  match.go  match_test.go
haskell/: ChangeLog.md  README.md  package.yaml  stack.yaml  templates.json
haskell/app/: Main.hs
haskell/src/Network/Domain/: GlobMatcher.hs  ParseMatch.hs  TreeMatcher.hs
python/: README.md  main.py  main_bench.py  requirements.txt
python/cmatch/: __init__.py  cmatch.pxd  cmatch.pyx  setup.py
python/pymatch/: __init__.py  pymatch.py
rust/: Cargo.toml  README.md  templates.json
rust/src/: main.rs
src/Network/Domain/: Match.hs
