[package]
name = "domatch"
version = "0.1.0"
authors = ["Alexey Simuskov <asimuskov@intermedia.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.2.11"
